--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,9 +28,11 @@ android {
 repositories {
     mavenCentral()
     maven { url "https://www.jitpack.io" }
+    maven {url "https://clojars.org/repo/"}
 }
 
 def dbflow_version = "4.2.4"
+def icepick_version = "3.2.0"
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
@@ -53,6 +55,8 @@ dependencies {
     compile "com.github.Raizlabs.DBFlow:dbflow-core:${dbflow_version}"
     compile "com.github.Raizlabs.DBFlow:dbflow:${dbflow_version}"
     compile "com.github.Raizlabs.DBFlow:dbflow-kotlinextensions:${dbflow_version}"
+    compile "frankiesardo:icepick:$icepick_version"
+    kapt "frankiesardo:icepick-processor:$icepick_version"
 }
 
 androidExtensions {
